Generate swag.
