# go/src/docs/swagger.json
@@ -162,6 +162,41 @@
                     }
                 }
             }
+        },
+        "/lab3": {
+            "get": {
+                "description": "Lab3",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Lab3"
+                ],
+                "summary": "Lab3",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Название группы",
+                        "name": "group_name",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/github_com_ruslanonly_university-student-managment-system_src_internal_features_lab3_service.Lab3ReportItem"
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -196,6 +231,40 @@
                 },
                 "course_name": {
                     "type": "string"
+                }
+            }
+        },
+        "github_com_ruslanonly_university-student-managment-system_src_internal_features_lab3_service.Lab3ReportItem": {
+            "type": "object",
+            "properties": {
+                "course_name": {
+                    "type": "string"
+                },
+                "group_name": {
+                    "type": "string"
+                },
+                "students_attendance": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_ruslanonly_university-student-managment-system_src_internal_features_lab3_service.Lab3ReportStudent"
+                    }
+                }
+            }
+        },
+        "github_com_ruslanonly_university-student-managment-system_src_internal_features_lab3_service.Lab3ReportStudent": {
+            "type": "object",
+            "properties": {
+                "planned_quantity": {
+                    "type": "integer"
+                },
+                "student_full_name": {
+                    "type": "string"
+                },
+                "student_grade_book_id": {
+                    "type": "integer"
+                },
+                "visited_quantity": {
+                    "type": "integer"
                 }
             }
         }
