# go/src/internal/features/lab3/handler/handler.go
@@ -11,6 +11,15 @@ type Handler struct {
 	s *service.Service
 }
 
+// Handle godoc
+// @Summary Lab3
+// @Description Lab3
+// @Tags Lab3
+// @Param group_name query string true "Название группы"
+// @Accept json
+// @Produce json
+// @Router /lab3 [get]
+// @Success 200 {object} []service.Lab3ReportItem
 func (h *Handler) Handle(w http.ResponseWriter, r *http.Request) {
 	query := r.URL.Query()
 
